--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.datasource.url= jdbc: mysql://localhost:3307/Bugtracker
 #spring.datasource.username=VaniReddy
-#spring.datasource.password=REMOVED
+#spring.datasource.password=Vani@2001
 spring.datasource.url=jdbc:mysql://localhost:3307/Bugtracker
-spring.datasource.username=REMOVED
-spring.datasource.password=REMOVED
+spring.datasource.username=root
+spring.datasource.password=Vani@2001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.mode=always
